Revert "Widen sidebar and fix alignment"
This reverts commit 5ef25607ecc0bb93b5df76f6e8678985cfed02e0.

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -14,7 +14,7 @@
   margin-bottom: 1em;
 
   @include breakpoint($large) {
-    @include span(2.5 of 12);
+    @include span(2 of 12);
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
@@ -234,8 +234,7 @@
   }
 
   li {
-    white-space: normal;
-    word-break: break-word;
+    white-space: nowrap;
   }
 
   a {
@@ -250,12 +249,6 @@
 
     &:hover {
       text-decoration: underline;
-    }
-
-    i {
-      width: 1.25em;
-      text-align: center;
-      flex-shrink: 0;
     }
   }
 }
